--- a/style.css
+++ b/style.css
@@ -93,6 +93,16 @@ header {
   width: 100%;
 }
 
+
+.tituloActa{
+  font-size: 200%;
+  color:#000000;
+  text-align: center;
+  margin-bottom: 20px;
+  
+}
+
+
 .titulo {
   font-size: 200%;
   color:#bbe1fa;
@@ -139,6 +149,23 @@ header {
 #login input::placeholder {
   font-family: 'Overpass', sans-serif;
   color: #E4E4E4;
+}
+
+#afegir button{
+  font-family: 'Overpass', sans-serif;
+  font-size: 110%;
+  color:#1b262c;
+  width: 100%;
+  height: 40px;
+  border: none;
+  
+  border-radius: 3px 3px 3px 3px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+  
+  background-color: #bbe1fa;
+  
+  margin-top: 10px;
 }
 
 #login button {
