--- a/style.css
+++ b/style.css
@@ -42,17 +42,7 @@ table {
   width: 100%;
 
 }
-.formulari {
-  border: 1px solid rgb(212, 208, 208);
-  padding: 20px;
-  border-radius: 10px;
-  background-color: bisque;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 80vh;
-  height: 40vh;
-}
+
 
 tr:nth-child(even) {
   background-color: #f2f2f2;
@@ -64,6 +54,18 @@ tr:nth-child(even) {
   padding: 10px;
   box-sizing: border-box;
 }
+.columnaFormulari {
+  display: flex;
+  align-items: center;
+}
+.fila {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
 .card {
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
@@ -83,18 +85,15 @@ opacity: 0.0;
 display: flex;
 align-items: center;
 justify-content: center;
-
 margin: 0;
 padding: 0;
-min-width: 100vw;
-min-height: 100vh;
 width: 100%;
 height: 100%;
 }
 
 #central {
-max-width: 320px;
-width: 100%;
+  margin-top: 6vh;
+  width: 80vh;
 }
 
 
@@ -129,7 +128,26 @@ border-radius: 3px 3px 3px 3px;
 
 box-sizing: border-box;
 }
-
+#login select {
+  font-family: 'Overpass', sans-serif;
+  font-size: 110%;
+  color: #1b262c;
+  
+  display: block;
+  width: 100%;
+  height: 40px;
+  
+  margin-bottom: 10px;
+  padding: 5px 5px 5px 10px;
+  
+  box-sizing: border-box;
+  
+  border: none;
+  border-radius: 3px 3px 3px 3px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+  }
+  
 #login input {
 font-family: 'Overpass', sans-serif;
 font-size: 110%;
