--- a/style.css
+++ b/style.css
@@ -103,7 +103,12 @@ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 .container {
 padding: 0vh 2vh;
-text-align: justify;
+display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+  margin-top: 20px;
 }
 
 .desactivado {
@@ -123,8 +128,8 @@ height: 100%;
 }
 
 #central {
+  width: 80%;
   margin-top: 6vh;
-  width: 80vh;
 }
 
 
@@ -134,6 +139,24 @@ color:#000000;
 text-align: center;
 margin-bottom: 20px;
 
+}
+.profile-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-picture {
+  height: 32vh;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10vh;
+}
+
+.info-container {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 
@@ -209,7 +232,7 @@ font-family: 'Overpass', sans-serif;
 font-size: 110%;
 color:#1b262c;
 width: 100%;
-height: 40px;
+height: 7vh;
 border: none;
 
 border-radius: 3px 3px 3px 3px;
@@ -337,4 +360,26 @@ color: #3282b8;
 .jugadora-info p {
   margin: 5px 0;
 }
+
+
+.escut {
+  margin-right: 10px;
+}
+
+.escut img {
+  max-width: 30vh;
+  vertical-align: middle;
+}
+
+.club-info {
+  display: flex;
+  align-items: center;
+}
+
+.club-info h1 {
+  font-size: 40px;
+  margin: 0;
+}
+
+
 
