--- a/style.css
+++ b/style.css
@@ -62,17 +62,24 @@ body {
   margin: 0;
 }
 table {
-  border-collapse: collapse;
-  width: max-content;
-  flex-wrap: wrap;
+
   width: 100%;
-
+  border-collapse: collapse;
 }
-
 
 tr:nth-child(even) {
   background-color: #f2f2f2;
+  height: max-content;
+  width: 100%;
 }
+
+td {
+  flex-grow: 1;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+
 
 .columna {
   float: left;
